--- a/Assignment03/app/src/main/res/layout/activity_main.xml
+++ b/Assignment03/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/black"
@@ -117,7 +118,7 @@
     <!-- Blank space (use View to represent white space) -->
     <View
         android:layout_width="0dp"
-        android:layout_height="300dp"
+        android:layout_height="400dp"
         android:background="@android:color/white"
         app:layout_constraintTop_toBottomOf="@+id/textViewMIT3106"
         app:layout_constraintStart_toStartOf="parent"
