--- a/Assignment04/app/src/main/res/layout/activity_main.xml
+++ b/Assignment04/app/src/main/res/layout/activity_main.xml
@@ -53,6 +53,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
+                android:autofillHints="Enter a number"
                 android:hint="Enter first number"
                 android:inputType="numberDecimal"
                 android:textColor="@color/white"
