--- a/Assignment05/app/src/main/res/layout/activity_login.xml
+++ b/Assignment05/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Login">
+    tools:context=".LoginActivity">
 
     <!--Heading-->
     <TextView
@@ -51,14 +51,14 @@
         android:layout_width="310dp"
         android:layout_height="48dp"
         android:autofillHints=""
-        android:inputType="text"
         android:hint="enter user name"
+        android:inputType="text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/userName"
         tools:ignore="HardcodedText,MissingConstraints"
         tools:layout_editor_absoluteX="61dp"
-        tools:layout_editor_absoluteY="111dp"
-        app:layout_constraintTop_toBottomOf="@id/userName"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        tools:layout_editor_absoluteY="111dp" />
 
     <!--Password-->
     <TextView
@@ -78,14 +78,14 @@
         android:layout_width="310dp"
         android:layout_height="48dp"
         android:autofillHints=""
-        android:inputType="textPassword"
         android:hint="enter password"
+        android:inputType="textPassword"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/password"
         tools:ignore="HardcodedText,MissingConstraints"
         tools:layout_editor_absoluteX="61dp"
-        tools:layout_editor_absoluteY="111dp"
-        app:layout_constraintTop_toBottomOf="@+id/password"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        tools:layout_editor_absoluteY="111dp" />
 
     <Button
         android:id="@+id/login_button"
