--- a/Assignment07/app/src/main/res/layout/activity_admin_login.xml
+++ b/Assignment07/app/src/main/res/layout/activity_admin_login.xml
@@ -5,18 +5,23 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/img"
     android:alpha="0.9"
-    tools:context=".Login">
+    android:alwaysDrawnWithCache="false"
+    android:animateLayoutChanges="false"
+    android:animationCache="false"
+    android:background="@drawable/img"
+    tools:context=".AdminLogin"
+    tools:visibility="visible">
 
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="96dp"
-        android:layout_marginTop="44dp"
-        android:text="Member Login"
+        android:layout_marginStart="108dp"
+        android:layout_marginTop="24dp"
+        android:backgroundTintMode="src_over"
+        android:text="ADMIN LOGIN"
         android:textColor="@color/white"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -25,62 +30,70 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/txtuname2"
+        android:id="@+id/txtuname1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="104dp"
-        android:layout_marginTop="172dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="156dp"
+        android:backgroundTintMode="src_over"
         android:text="Username"
         android:textColor="@color/white"
-        android:textSize="20sp"
+        android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/txtpassword2"
+        android:id="@+id/txtpassword1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="104dp"
-        android:layout_marginTop="304dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="296dp"
         android:text="Password"
         android:textColor="@color/white"
-        android:textSize="20sp"
+        android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/txtUserName2"
+        android:id="@+id/txtUserName1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="104dp"
         android:layout_marginTop="200dp"
+        android:backgroundTint="#ECE6E6"
+        android:cursorVisible="false"
         android:ems="10"
         android:inputType="textPersonName"
-        android:backgroundTint="@color/white"
-        android:textColor="#FBFBFB"
+        android:textColor="#F4F0F0"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/txtpass2"
+        android:id="@+id/txtpass1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="104dp"
-        android:layout_marginTop="328dp"
         android:backgroundTint="@color/white"
         android:ems="10"
         android:inputType="textPassword"
-        android:textColor="#FBFBFB"
+        android:textColor="@color/white"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintVertical_bias="0.5" />
+
 
     <Button
-        android:id="@+id/login2"
+        android:id="@+id/login1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="264dp"
-        android:layout_marginTop="472dp"
+        android:layout_marginStart="272dp"
+        android:layout_marginTop="532dp"
         android:background="@null"
+        android:backgroundTintMode="src_over"
         android:text="Login"
         android:textColor="@android:color/white"
         android:textStyle="bold"
@@ -88,12 +101,13 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btnback2"
+        android:id="@+id/btnback1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="96dp"
-        android:layout_marginTop="468dp"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="532dp"
         android:background="@null"
+        android:backgroundTintMode="src_over"
         android:text="Back"
         android:textColor="@android:color/white"
         android:textStyle="bold"
