--- a/Assignment07/app/src/main/res/layout/activity_signup.xml
+++ b/Assignment07/app/src/main/res/layout/activity_signup.xml
@@ -5,6 +5,8 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/img"
+    android:alpha="0.9"
     tools:context=".Signup">
 
     <EditText
@@ -13,7 +15,7 @@
         android:layout_height="47dp"
         android:layout_marginStart="144dp"
         android:layout_marginTop="304dp"
-        android:backgroundTint="@color/ic_launcher_background"
+        android:backgroundTint="@color/black"
         android:ems="10"
         android:inputType="textPersonName"
         android:textColor="#FBFBFB"
@@ -27,7 +29,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="312dp"
         android:text="Address"
-        android:textColor="@color/ic_launcher_background"
+        android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -38,7 +40,7 @@
         android:layout_height="54dp"
         android:layout_marginStart="148dp"
         android:layout_marginTop="84dp"
-        android:backgroundTint="@color/ic_launcher_background"
+        android:backgroundTint="@color/design_default_color_primary"
         android:ems="10"
         android:inputType="textPersonName"
         android:textColor="#FBFBFB"
@@ -52,7 +54,7 @@
         android:layout_marginStart="28dp"
         android:layout_marginTop="220dp"
         android:text="Contact"
-        android:textColor="@color/ic_launcher_background"
+        android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -63,7 +65,7 @@
         android:layout_height="37dp"
         android:layout_marginStart="148dp"
         android:layout_marginTop="260dp"
-        android:backgroundTint="@color/ic_launcher_background"
+        android:backgroundTint="@color/black"
         android:ems="10"
         android:inputType="textEmailAddress"
         android:textColor="#FBFBFB"
@@ -77,7 +79,7 @@
         android:layout_marginStart="28dp"
         android:layout_marginTop="92dp"
         android:text="First Name"
-        android:textColor="@color/ic_launcher_background"
+        android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -89,7 +91,7 @@
         android:layout_marginStart="28dp"
         android:layout_marginTop="160dp"
         android:text="Last Name"
-        android:textColor="@color/ic_launcher_background"
+        android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -100,7 +102,7 @@
         android:layout_height="49dp"
         android:layout_marginStart="144dp"
         android:layout_marginTop="204dp"
-        android:backgroundTint="@color/ic_launcher_background"
+        android:backgroundTint="@color/black"
         android:ems="10"
         android:inputType="phone"
         android:textColor="#FBFBFB"
@@ -114,7 +116,7 @@
         android:layout_marginStart="144dp"
         android:layout_marginTop="144dp"
 
-        android:backgroundTint="@color/ic_launcher_background"
+        android:backgroundTint="@color/black"
         android:ems="10"
         android:inputType="textPersonName"
         android:textColor="#FBFBFB"
@@ -128,7 +130,7 @@
         android:layout_marginStart="28dp"
         android:layout_marginTop="264dp"
         android:text="Email"
-        android:textColor="@color/ic_launcher_background"
+        android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -140,7 +142,7 @@
         android:layout_marginStart="148dp"
         android:layout_marginTop="16dp"
         android:text="SIGNUP"
-        android:textColor="@color/ic_launcher_background"
+        android:textColor="@color/black"
         android:textSize="30sp"
         android:textStyle="bold"
         app:fontFamily="monospace"
@@ -153,7 +155,7 @@
         android:layout_height="48dp"
         android:layout_marginStart="144dp"
         android:layout_marginTop="364dp"
-        android:backgroundTint="@color/ic_launcher_background"
+        android:backgroundTint="@color/black"
         android:ems="10"
         android:inputType="textPersonName"
         android:textColor="#FBFBFB"
@@ -182,7 +184,7 @@
         android:layout_marginStart="28dp"
         android:layout_marginTop="384dp"
         android:text="Username"
-        android:textColor="@color/ic_launcher_background"
+        android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -194,7 +196,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="432dp"
         android:text="Password"
-        android:textColor="@color/ic_launcher_background"
+        android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
