--- a/Assignment08/app/src/main/res/layout/activity_main.xml
+++ b/Assignment08/app/src/main/res/layout/activity_main.xml
@@ -7,33 +7,47 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/button_local"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:text="Browse Local"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="HardcodedText,MissingConstraints"
-        tools:layout_editor_absoluteY="0dp" />
 
     <Button
-        android:id="@+id/button_url"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="84dp"
-        android:text="Browse URL"
-        app:layout_constraintStart_toEndOf="@+id/button_local"
-        tools:ignore="HardcodedText,MissingConstraints"
-        tools:layout_editor_absoluteY="0dp" />
+        android:id="@+id/btn_local"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center"
+        android:backgroundTint="#4CAF50"
+        android:elevation="4dp"
+        android:text="Open Local Files"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/btn_url"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btn_url"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="48dp"
+        android:backgroundTint="#2196F3"
+        android:elevation="4dp"
+        android:text="Open URL"
+        android:textColor="#FFFFFF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/web_view"
+        app:layout_constraintTop_toTopOf="@+id/btn_local" />
 
     <WebView
-        android:id="@+id/webview"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/button_local"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/web_view"
+        android:layout_width="409dp"
+        android:layout_height="619dp"
+        android:layout_weight="1"
+        android:background="#FFFFF0"
+        android:elevation="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_url" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
