--- a/Assignment07/app/src/main/res/layout/activity_manage_books.xml
+++ b/Assignment07/app/src/main/res/layout/activity_manage_books.xml
@@ -179,10 +179,23 @@
         android:id="@+id/btnback3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="168dp"
+        android:layout_marginStart="80dp"
         android:layout_marginTop="496dp"
         android:background="@null"
         android:text="back"
+        android:textColor="@android:color/white"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnBooksearch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="236dp"
+        android:layout_marginTop="496dp"
+        android:background="@null"
+        android:text="Search"
         android:textColor="@android:color/white"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
