--- a/Assignment07/app/src/main/res/layout/activity_admin_menu.xml
+++ b/Assignment07/app/src/main/res/layout/activity_admin_menu.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -17,74 +16,76 @@
         android:text="Admin Menu"
         android:textColor="@color/white"
         android:textSize="30sp"
-        android:textStyle="bold"
-        app:fontFamily="monospace"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textStyle="bold" />
 
 
     <Button
         android:id="@+id/btnaddingB"
         android:layout_width="280dp"
         android:layout_height="49dp"
-        android:layout_marginTop="92dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="70dp"
+        android:layout_marginTop="216dp"
+        android:layout_marginEnd="61dp"
+        android:layout_marginBottom="464dp"
         android:background="@color/design_default_color_primary"
         android:text="manage book"
         android:textColor="@android:color/white"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/btnmanagepub"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.58"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.493" />
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/btnmanagepub"
         android:layout_width="280dp"
         android:layout_height="49dp"
-        android:layout_marginTop="176dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="70dp"
+        android:layout_marginTop="340dp"
+        android:layout_marginEnd="61dp"
+        android:layout_marginBottom="341dp"
         android:background="@color/design_default_color_primary"
         android:text="manage publisher"
         android:textColor="@android:color/white"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/btnbranch"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.58"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.479" />
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/btnbranch"
         android:layout_width="280dp"
         android:layout_height="49dp"
-        android:layout_marginTop="244dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="70dp"
+        android:layout_marginTop="458dp"
+        android:layout_marginEnd="61dp"
+        android:layout_marginBottom="224dp"
         android:background="@color/design_default_color_primary"
         android:text="manage Branch"
         android:textColor="@android:color/white"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/btnlending"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.58"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.544" />
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/btnlending"
         android:layout_width="280dp"
         android:layout_height="49dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="69dp"
+        android:layout_marginTop="105dp"
+        android:layout_marginEnd="62dp"
+        android:layout_marginBottom="576dp"
         android:background="@color/design_default_color_primary"
         android:text="book lending"
         android:textColor="@android:color/white"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.58"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.643" />
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/btnlogout"
@@ -95,8 +96,6 @@
         android:background="@null"
         android:text="logout"
         android:textColor="@android:color/white"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textStyle="bold" />
 
-  </androidx.coordinatorlayout.widget.CoordinatorLayout>
+</RelativeLayout>
